# libpapyros

./: .builder.yml  .clog.toml  CHANGELOG.md  CMakeLists.txt  README.md
declarative/: CMakeLists.txt  clipboard.cpp  clipboard.h  plugin.cpp  plugin.h  qmldir
src/: CMakeLists.txt  PapyrosConfig.cmake.in
src/config/: kquickconfig.cpp  kquickconfig.h
src/qquicklist/: qobjectlistmodel.cpp  qobjectlistmodel.h  qquicklist.h
src/wallet/: kquickwallet.cpp  kquickwallet.h
